# kaldi-master5.5

./: .gitignore  .gitpod.Dockerfile  CMakeLists.txt  _build.sh
cmake/: gen_cmake_skeleton.py
lapack-3.12.1/: CMakeLists.txt
lapack-3.12.1/BLAS/: CMakeLists.txt
src/base/: CMakeLists.txt
src/chain/: CMakeLists.txt
src/chainbin/: CMakeLists.txt
src/cudadecoder/: CMakeLists.txt
src/cudadecoderbin/: CMakeLists.txt
src/cudafeat/: CMakeLists.txt
src/cudafeatbin/: CMakeLists.txt
src/cudamatrix/: CMakeLists.txt
src/decoder/: CMakeLists.txt
src/doc/: CMakeLists.txt
src/feat/: CMakeLists.txt
src/featbin/: CMakeLists.txt
src/fgmmbin/: CMakeLists.txt
src/fstbin/: CMakeLists.txt
src/fstext/: CMakeLists.txt
src/gmm/: CMakeLists.txt
src/gmmbin/: CMakeLists.txt
src/gst-plugin/: CMakeLists.txt
src/hip/: CMakeLists.txt
src/hmm/: CMakeLists.txt
src/itf/: CMakeLists.txt
src/ivector/: CMakeLists.txt
src/ivectorbin/: CMakeLists.txt
src/kws/: CMakeLists.txt
src/kwsbin/: CMakeLists.txt
src/lat/: CMakeLists.txt
src/latbin/: CMakeLists.txt
src/lm/: CMakeLists.txt
src/makefiles/: CMakeLists.txt
src/matrix/: CMakeLists.txt
src/nnet/: CMakeLists.txt
src/nnet2/: CMakeLists.txt
src/nnet2bin/: CMakeLists.txt
src/nnet3/: CMakeLists.txt
src/nnet3bin/: CMakeLists.txt
src/nnetbin/: CMakeLists.txt
src/online/: CMakeLists.txt
src/online2/: CMakeLists.txt
src/online2bin/: CMakeLists.txt
src/onlinebin/: CMakeLists.txt
src/probe/: CMakeLists.txt
src/rnnlm/: CMakeLists.txt
src/rnnlmbin/: CMakeLists.txt
src/sgmm2/: CMakeLists.txt
src/sgmm2bin/: CMakeLists.txt
src/transform/: CMakeLists.txt
src/tree/: CMakeLists.txt
src/util/: CMakeLists.txt
